--- a/login.html
+++ b/login.html
@@ -4,32 +4,99 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Form</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/style.css" />
   </head>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"
+  ></script>
   <body>
-    <div class="container">
-      <h2>User Login</h2>
-      <form id="loginForm" onsubmit="login()" method="POST">
-        <div class="form-group">
-          <label for="login_email">Email:</label>
-          <input type="text" id="login_email" name="login_email" required />
+    <div class="container-fluid">
+      <div style="height: 100vh" class="row">
+        <div class="col-6 mob-col p-0">
+          <div class="image-container"></div>
         </div>
-        <div class="form-group">
-          <label for="login_password">Password:</label>
-          <input
-            type="password"
-            id="login_password"
-            name="login_password"
-            required
-          />
+        <div class="col-6 mob-col-two">
+          <div class="login-container">
+            <h2 class="login-heading pb-2">User Login</h2>
+            <form id="loginForm" onsubmit="loginFormSubmit()" method="POST">
+              <div class="form-group">
+                <input
+                  type="text"
+                  placeholder="Email"
+                  id="login_email"
+                  name="login_email"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="password"
+                  placeholder="Password"
+                  id="login_password"
+                  name="login_password"
+                  required
+                />
+              </div>
+              <div class="checkbox-container pb-3">
+                <input
+                  type="checkbox"
+                  id="keep_signed_in"
+                  class="checkbox-input"
+                />
+                <label for="keep_signed_in" class="custom-checkbox"></label>
+                <span class="checkbox-label">Keep me signed in</span>
+              </div>
+
+              <div class="form-group">
+                <input type="submit" value="Login" />
+              </div>
+            </form>
+            <div class="additional-options">
+              <p>
+                <a href="forgot_password.html">Forgot password?</a>
+              </p>
+              <p>
+                Don't have an account? <a href="registration.html">Register</a>
+              </p>
+              <div class="continue-with">
+                <div class="line"></div>
+                <div class="text">Or continue with:</div>
+                <div class="line"></div>
+              </div>
+              <div class="social-icons pt-3">
+                <a href="#" class="icon-link"
+                  ><img src="./images/Facebook.png" alt="Facebook"
+                /></a>
+                <a href="#" class="icon-link"
+                  ><img src="./images/Instagram.png" alt="Instagram"
+                /></a>
+                <a href="#" class="icon-link"
+                  ><img src="./images/Google.png" alt="Google"
+                /></a>
+                <a href="#" class="icon-link"
+                  ><img src="./images/Twitter.png" alt="Twitter"
+                /></a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="form-group">
-          <input type="submit" value="Login" />
-        </div>
-        <div class="error-message" id="loginError"></div>
-      </form>
-      <p>Don't have an account? <a href="registration.html">Register</a></p>
+      </div>
     </div>
-    <script src="./myScript.js"></script>
+
+    <script src="./login.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </body>
 </html>
