--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
 
     input[type="text"],
     input[type="number"] {
-      width: 100%;
+      width: 98%;
       padding: 8px;
       margin-bottom: 10px;
       border: 1px solid #ccc;
@@ -73,6 +73,10 @@
       color: #fff;
     }
 
+    tbody tr:nth-child(even) {
+      background-color: #f5f5f5;
+    }
+
     a.home-button:hover {
       background-color: #0056b3;
     }
@@ -106,16 +110,22 @@
       justify-content: center;
       align-items: center;
     }
+    @media only screen and (max-width: 600px) {
+      .btn-edit {
+        margin-top: 5px;
+        padding: 6px 19px;
+      }
+    }
   </style>
   <body>
     <div class="div">
       <h2 class="products">All Products</h2>
     </div>
     <div class="div">
-      <a href="registration.html" class="home-button">Logout</a>
+      <a onclick="logout()" class="home-button">Logout</a>
     </div>
     <div class="product-container">
-      <form id="productForm">
+      <form id="productForm" onsubmit="handleProductUpdate()">
         <label for="productName">Product Name:</label>
         <input type="text" id="productName" required />
         <label for="productPrice">Product Price:</label>
@@ -142,5 +152,6 @@
       </table>
     </div>
     <script src="./myScript.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </body>
 </html>
