--- a/login.html
+++ b/login.html
@@ -68,9 +68,7 @@
               <p>
                 <a href="forgot_password.html">Forgot password?</a>
               </p>
-              <p>
-                Don't have an account? <a href="registration.html">Register</a>
-              </p>
+              <p>Don't have an account? <a href="index.html">Register</a></p>
               <div class="continue-with">
                 <div class="line"></div>
                 <div class="text">Or continue with:</div>
