--- a/products.html
+++ b/products.html
@@ -130,9 +130,7 @@
         <input type="text" id="productName" required />
         <label for="productPrice">Product Price:</label>
         <input type="number" id="productPrice" required />
-        <button id="Submit" onclick="addData()" type="submit">
-          Add Product
-        </button>
+        <button id="Submit" type="submit">Add Product</button>
         <button id="Update" type="button">Update Product</button>
       </form>
 
