--- a/products.html
+++ b/products.html
@@ -105,6 +105,9 @@
       color: white;
       border: none;
     }
+    #Update {
+      display: none;
+    }
     .products {
       display: flex;
       justify-content: center;
