--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -35,9 +35,9 @@
               <div class="form-group">
                 <input
                   type="text"
-                  placeholder="Email"
-                  id="login_email"
-                  name="login_email"
+                  placeholder="username"
+                  id="login_username"
+                  name="login_username"
                   required
                 />
               </div>
@@ -68,7 +68,7 @@
               <p>
                 <a href="forgot_password.html">Forgot password?</a>
               </p>
-              <p>Don't have an account? <a href="index.html">Register</a></p>
+              <p>Don't have an account? <a href="./index.html">Register</a></p>
               <div class="continue-with">
                 <div class="line"></div>
                 <div class="text">Or continue with:</div>
@@ -94,7 +94,7 @@
       </div>
     </div>
 
-    <script src="./login.js"></script>
+    <script src="./JS/login.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </body>
 </html>
