--- a/social.html
+++ b/social.html
@@ -225,6 +225,7 @@
 
           <div id="feed-container" class="feedContainer"></div>
           <!-- <button id="load-more-btn">Load more</button> -->
+          <button id="load-more-btn">Load More</button>
         </div>
         <div class="col-3 last-mob-col">
           <div class="right-container">
